# PyMesh

./: README.md  playground.py  pyproject.toml  script.py
example_scripts/: script.py
src/cli-client/: convert.py
src/cli-clients/: convert.py  visualize.py
src/convertor/: __init__.py  convertor.py  mesh_types.py  pymeshlab_convertor.py  trimesh_convertor.py
src/utils/: debugger.py
src/visualizer/: __init__.py  camera.py  color.py  coordinate.py  light.py  mesh.py  plotter.py
tests/convertor/: mesh_types_test.py
